fix scrollbar

--- a/src/App.scss
+++ b/src/App.scss
@@ -993,12 +993,14 @@ svg {
 
 /*滚动条的宽度*/
 *::-webkit-scrollbar {
-  width: 4px;
+  width: 10px;
+  height: 10px;
+  background-color: #212438;
 }
 
 /*滚动条的设置*/
 *::-webkit-scrollbar-thumb {
-  background-color: #425bd6;
+  background-color: #111527;
   background-clip: padding-box;
   -webkit-border-radius: 1em;
   -moz-border-radius: 1em;
